# MarketSentimentAnalyzer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_delta_fetch.py
config/: database.yaml  llm_config.yaml  llm_prompt.yaml  llm_prompts.yaml  signal_thresholds.yaml  tickers.json  tickers.py
logs/: market_sentiment.log.2026-03-28
scripts/: compute_indicators.py  generate_signals.py
src/: __init__.py  config.py  database.py  display.py  fetchers.py  llm_client.py  llm_signal_advisor.py  main.py  options_engine.py  sentiment.py  signals.py
tests/: test_config.py  test_database.py  test_display.py  test_fetchers.py  test_generate_signals.py  test_hard_filters.py  test_indicators.py  test_main.py  test_sentiment.py
