[tool.poetry]
name = "market-sentiment-analyzer"
version = "0.1.0"
description = "Technical indicators analyzer for market data"
authors = ["Venkat <venkat@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
yfinance = ">=0.2.28"
pandas = ">=2.0.0"
pandas-ta = ">=0.4.67b0"
structlog = ">=24.1.0"
tabulate = ">=0.9.0"
pyyaml = ">=6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
